--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -1,3 +1,140 @@
 .auth {
     min-height: 100vh;
+    padding: 5rem 0;
+    background-color: var(--secondary_color);
+}
+
+.auth__container {
+    display: flex;
+    justify-content: center;
+    width: 85%;
+    margin: auto;
+    background-color: #ffffff;
+    height: 100%;
+    min-height: 80vh;
+    border-radius: 15px;
+    border: 6px solid var(--primary-color);
+}
+
+.auth__container_left {
+    flex: 0.5;
+    padding: 2rem 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.auth_logo {
+    display: flex;
+    align-items: flex-start;
+    gap: 0.25rem;
+}
+
+.auth__container_right {
+    flex: 0.5;
+}
+
+.auth_form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 70%;
+}
+
+.af__h1 {
+    color: var(--tertiary-color);
+    font-family: var(--primary-font);
+    font-size: 2.05rem;
+}
+
+.af__h6 {
+    color: var(--tertiary-color);
+    opacity: 0.85;
+    font-family: var(--primary-font);
+    margin-top: 0.15rem;
+    font-size: 0.95rem;
+}
+
+.auth_input_container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    margin-top: 2.5rem;
+    width: 100%;
+}
+
+.auth_single_input {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.125rem;
+    border-radius: 10px;
+    border: 2px solid var(--primary-color);
+    width: 100%;
+    padding: 0.25rem 0.65rem;
+}
+
+.auth_label {
+    font-size: 0.75rem;
+    font-weight: 500;
+    color: #333333b6;
+    font-family: var(--secondary-font);
+}
+
+.auth_input {
+    width: 100%;
+    font-family: var(--primary-font);
+    font-weight: 600;
+    color: var(--tertiary-color);
+    font-size: 0.75rem;
+    outline: none;
+    border: none;
+    caret-color: var(--secondary_color);
+}
+
+
+.auth_btns {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 2rem;
+}
+
+.auth_btns button {
+    width: 160px;
+    height: 50px;
+    border-radius: 10px;
+    cursor: pointer;
+    outline: none;
+    white-space: nowrap;
+    font-size: 0.9rem;
+    font-family: var(--primary-font);
+    font-weight: 600;
+}
+
+.auth__primary_btn {
+    color: #ffffff;
+    background-color: var(--primary-color);
+    border: none;
+}
+
+.auth__secondary_btn {
+    background-color: #ffffff;
+    border: 2px solid var(--primary-color);
+    color: var(--tertiary-color);
+}
+
+.auth_footer {
+    width: 70%;
+    margin-top: 2rem;
+}
+
+.auth_footer p {
+    font-family: var(--secondary-font);
+    color: #686868b7;
+    font-weight: 600;
+    font-size: 0.85rem;
 }
