--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -68,3 +68,98 @@
     border: none;
     background: none;
 }
+
+.profile__general {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    gap: 1rem;
+}
+
+.profile_general_input {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 60%;
+    gap: 0.25rem;
+}
+
+.profile_label {
+    font-size: 0.85rem;
+    font-weight: 700;
+    color: #333333b6;
+    font-family: var(--secondary-font);
+}
+
+.profile_input {
+    width: 100%;
+    font-family: var(--primary-font);
+    font-weight: 600;
+    color: #1b6165;
+    font-size: 0.9rem;
+    outline: none;
+    border: none;
+    caret-color: #1b6165;
+    background-color: #dbdddc;
+    padding: 0.8rem;
+    border-radius: 10px;
+}
+
+.profile_security_input {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    gap: 0.25rem;
+}
+
+.p_s_div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.p_s__input {
+    width: 70%;
+    font-family: var(--primary-font);
+    font-weight: 600;
+    font-size: 0.8rem;
+    outline: none;
+    border: none;
+    caret-color: #333333;
+    color: #3333338f;
+    padding: 0.5rem 0;
+}
+
+.p_s_div button {
+    width: 30%;
+    cursor: pointer;
+    outline: none;
+    white-space: nowrap;
+    font-family: var(--primary-font);
+    font-weight: 600;
+    font-size: 0.8rem;
+    text-align: left;
+}
+
+.profile_save {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 3rem;
+}
+
+.profile_save button {
+    width: 120px;
+    height: 50px;
+    border-radius: 50px;
+    cursor: pointer;
+    outline: none;
+    white-space: nowrap;
+    font-size: 1rem;
+    font-family: var(--primary-font);
+    font-weight: 600;
+}
