--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -12,7 +12,6 @@
     margin: auto;
     background-color: #ffffff;
     height: 100%;
-    min-height: 80vh;
     border-radius: 15px;
     padding: 3rem 5rem;
 }
@@ -162,4 +161,140 @@
     font-size: 1rem;
     font-family: var(--primary-font);
     font-weight: 600;
+}
+
+
+
+@media (min-width: 992px) and (max-width: 1380px) {
+    .profile {
+        padding: 4rem 0;
+    }
+    
+    .profile__container {
+        gap: 1.5rem;
+        width: 75%;
+    }
+}
+
+
+@media screen and (max-width: 992px) {
+    .profile {
+        padding: 3rem 0;
+    }
+    
+    .profile__container {
+        gap: 1.5rem;
+        width: 85%;
+        padding: 2rem 3rem;
+    }
+    
+    .profile__container h1 {
+        font-size: 1.85rem;
+        margin-top: 1rem;
+    }
+    .profile_img {
+        width: 50px;
+        height: 50px;
+    }
+    
+    .profile__header_btns button {
+        width: 100px;
+        height: 50px;
+        font-size: 0.9rem;
+    }
+    .p_s__input {
+        width: 70%;
+        font-family: var(--primary-font);
+        font-weight: 600;
+        font-size: 0.8rem;
+    }
+    
+    .p_s_div button {
+        width: 30%;
+        cursor: pointer;
+        outline: none;
+        white-space: nowrap;
+        font-family: var(--primary-font);
+        font-weight: 600;
+        font-size: 0.8rem;
+    }
+    .profile_save button {
+        width: 100px;
+        height: 50px;
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .profile {
+        padding: 1rem;
+    }
+    
+    .profile__container {
+        gap: 1.5rem;
+        width: 100%;
+        padding: 1rem;
+    }
+    
+    .profile__container h1 {
+        font-size: 1.25rem;
+        margin-top: 1rem;
+    }
+    .profile_img {
+        width: 45px;
+        height: 45px;
+    }
+    
+    .profile__header_btns button {
+        width: 90px;
+        height: 45px;
+        font-size: 0.9rem;
+    }
+    .profile_general_input {
+        width: 80%;
+        gap: 0.25rem;
+    }
+    .profile_save {
+        width: 100%;
+        margin-top: 1rem;
+    }
+    .profile_save button {
+        width: 90px;
+        height: 45px;
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    
+    .profile__header_btns button {
+        width: 80px;
+        height: 40px;
+        font-size: 0.85rem;
+    }
+    .profile_general_input {
+        width: 100%;
+        gap: 0.25rem;
+    }
+    .p_s__input {
+        font-size: 0.7rem;
+    }
+    
+    .p_s_div button {
+        font-size: 0.7rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+
+}
+  
+@media only screen and (min-device-width: 320px) and (max-device-width: 
+  480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {
+
+}
+
+
+@media only screen and (device-width: 768px) {
+
 }
