--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
 
 [data-theme="light"]{
-  --primary-color: #156b6a;
+  --primary-color: #00C16E;
   --secondary_color: #ffc000;
   --tertiary-color: #2e1460;
   --primary-bg: #F3F5F7;
