--- a/src/assets/css/media-query.css
+++ b/src/assets/css/media-query.css
@@ -1,10 +1,14 @@
 @media (min-width: 992px) and (max-width: 1380px) {
-
+  .d_none {
+    display: none;
+  }
 }
 
 
 @media screen and (max-width: 992px) {
-
+  .d_none_992 {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -14,11 +18,15 @@
 }
 
 @media screen and (max-width: 600px) {
-
+  .d_none_600 {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 400px) {
-
+  .d_none_400 {
+    display: none;
+  }
 }
   
 @media only screen and (min-device-width: 320px) and (max-device-width: 
