--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   --primary-color: #00C16E;
   --secondary_color: #ffc000;
   --tertiary-color: #2e1460;
-  --primary-bg: #F3F5F7;
+  --primary-bg: #0C1712;
   --text-primary: #555555;
   --text-60: hsla(0,0,33%,0.6);
   --text-50: hsla(0,0,33%,0.5);
