--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -1,9 +1,12 @@
 .auth {
     min-height: 100vh;
-    padding: 5rem 0;
+    padding: 0;
     background-color: var(--primary-bg);
     position: relative;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .circle1{
@@ -34,7 +37,6 @@
     width: 85%;
     margin: auto;
     height: 100%;
-    min-height: 80vh;
     border-radius: 15px;
 }
 
@@ -185,9 +187,6 @@
 
 
 @media (min-width: 992px) and (max-width: 1380px) {
-    .auth {
-        padding: 4rem 0;
-    }
     .auth__container {
         width: 100%;
     }
