--- a/src/pages/DashboardPage/DashboardPage.css
+++ b/src/pages/DashboardPage/DashboardPage.css
@@ -59,3 +59,9 @@
 .dashboard__container {
     padding: 1rem;
 }
+
+@media screen and (max-width: 800px) {
+    .dashboard__container {
+        padding: 0;
+    }
+}
