--- a/src/components/Landing/Navbar/Navbar.css
+++ b/src/components/Landing/Navbar/Navbar.css
@@ -56,7 +56,7 @@
 
 .nav_login {
     background: none;
-    color: var(--bg-color);
+    color: #ffffff;
 }
 
 .nav_signup {
@@ -87,19 +87,22 @@
     }
 
     .navbar_btn {
-        gap: 0.5rem;
+        gap: 0.35rem;
     }    
 
     .navBtn {
         width: 80px;
         height: 38px;
-        font-weight: 800;
-        font-size: 16px;
+        font-size: 14px;
     }
 }
 
 @media screen and (max-width: 600px) {
-
+    .navBtn {
+        width: 70px;
+        height: 34px;
+        font-size: 12px;
+    }
 }
 
 @media screen and (max-width: 400px) {
