--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,22 @@
 [data-theme="dark"]{
 
 }
+
+html {
+  --scrollbarBG: #0C1712;
+  --thumbBG: #00C16E;
+  --gradBG: #0C1712;
+}
+body::-webkit-scrollbar {
+  width: 8px;
+}
+body {
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+body::-webkit-scrollbar-track {
+  background: var(--scrollbarBG);
+}
+body::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(var(--thumbBG), var(--gradBG));
+  /* background-color: var(--thumbBG) ; */
+}
